Completely refactored email service to use pub/sub using RabbitMq.
Signed-off-by: aniebietafia <aniebietafia87@gmail.com>